--- a/app/src/main/res/layout/memo_item.xml
+++ b/app/src/main/res/layout/memo_item.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="70dp"
     android:background="@drawable/memo_item_background"
-    android:minHeight="50dp"
+    android:minHeight="70dp"
     >
 
     <TextView
-        android:id="@+id/item_memo_text"
-        android:layout_centerVertical="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/item_memo_content_text"
+        android:textSize="25sp"
+        android:layout_alignParentTop="true"
+        android:paddingLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:id="@+id/item_memo_time_text"
+        android:textSize="15sp"
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         />
 
 </RelativeLayout>
