commit-4:添加数据库操作抽象接口，完善数据库操作，完善备忘录功能的新增、删除、修改、查询

--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -21,4 +21,11 @@
         android:layout_alignParentBottom="true"
         android:src="@android:drawable/ic_input_add" />
 
+    <TextView
+        android:id="@+id/memo_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="暂时没有备忘录~"/>
+
 </RelativeLayout>
