--- a/app/src/main/res/layout/layout_memo_content.xml
+++ b/app/src/main/res/layout/layout_memo_content.xml
@@ -3,18 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_save_memo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="保存"/>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/memo_content_tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <EditText
         android:id="@+id/memo_context_edit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/memo_content_tool_bar"
         android:background="@drawable/memo_item_background"
         android:gravity="start"
         />
