commit-7:为optionMenu添加图标，为备忘录内容编辑文本框添加文本监听，根据文本选择保存按钮是否可用

--- a/app/src/main/res/menu/memo_content_edit_menu.xml
+++ b/app/src/main/res/menu/memo_content_edit_menu.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/memo_content_undo"
         android:title="撤销"
+        android:icon="@drawable/ic_undo"
         app:showAsAction="always"/>
 
     <item android:id="@+id/memo_content_redo"
         android:title="重做"
+        android:icon="@drawable/ic_redo"
         app:showAsAction="always"/>
 
     <item android:id="@+id/memo_content_save"
         android:title="保存"
+        android:icon="@drawable/ic_save"
         app:showAsAction="always"/>
 </menu>
