--- a/app/src/main/res/drawable/memo_item_background.xml
+++ b/app/src/main/res/drawable/memo_item_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#4F00EE28" android:endColor="#03DAC8"/>
+    <stroke android:color="#D5D5D5" android:width="1.5dp"/>
     <corners android:radius="5dp"/>
 </shape>
