commit-12:添加列表显示入场动画和item删除动画

--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -5,6 +5,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memo_list"
+        android:layoutAnimation="@anim/entrance_memo_list"
         android:paddingTop="?attr/actionBarSize"
         android:dividerHeight="10dp"
         android:paddingLeft="10dp"
