commit-14:为抽屉栏添加设置选项

--- a/app/src/main/res/navigation/navigation_fragment_main.xml
+++ b/app/src/main/res/navigation/navigation_fragment_main.xml
@@ -21,4 +21,12 @@
 
     </fragment>
 
+    <fragment
+        android:id="@+id/navigation_fragment_settings"
+        android:name="com.eliot.notebook.settings.ui.SettingsFragment"
+        android:label="设置"
+        tools:layout="@layout/fragment_settings">
+
+    </fragment>
+
 </navigation>
