--- a/app/src/main/res/menu/navigation_main_menu.xml
+++ b/app/src/main/res/menu/navigation_main_menu.xml
@@ -9,4 +9,10 @@
             android:icon="@drawable/ic_diary"
             android:title="日记 "/>
     </group>
+
+    <group android:id="@+id/settings_and_about">
+        <item android:id="@+id/navigation_fragment_settings"
+            android:icon="@drawable/ic_settings"
+            android:title="设置"/>
+    </group>
 </menu>
