--- a/app/src/main/res/layout/item_memo.xml
+++ b/app/src/main/res/layout/item_memo.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="10dp"
+    android:layout_marginTop="7dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="3dp"
     android:background="@drawable/memo_item_background"
     >
 
@@ -28,5 +30,14 @@
         android:paddingTop="10dp"
         android:textColor="#000000"
         android:textSize="15sp" />
+
+    <ImageView
+        android:id="@+id/image_view_item_memo_check_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_button_unchecked"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        />
 
 </RelativeLayout>
